# cg_cvrp

./: CMakeLists.txt  README.md
include/: base_lp.hpp  config_parameters.hpp
include/column_generation/: callback_sec.hpp  cg.hpp  column.hpp  init_grb_model.hpp  init_pool.hpp  pctsp_ilp.hpp  set_covering_lp.hpp  tsp_bcsl_ilp.hpp
include/ext/lkh-2.0.9/: GainType.h  Genetic.h  Hashing.h  LKH.h  Segment.h  lkh_tsp.hpp
include/utils/: constants.hpp  stopwatch.hpp  tools.hpp
input/: example.cfg
src/: base_lp.cpp  config_parameters.cpp  main.cpp
src/column_generation/: callback_sec.cpp  cg.cpp  column.cpp  init_grb_model.cpp  init_pool.cpp  pctsp_ilp.cpp  set_covering_lp.cpp  tsp_bcsl_ilp.cpp
src/ext/lkh-2.0.9/: Activate.cpp  AddCandidate.cpp  AddTourCandidates.cpp  AdjustCandidateSet.cpp  AdjustClusters.cpp  AllocateStructures.cpp  Ascent.cpp  Best2OptMove.cpp  Best3OptMove.cpp  Best4OptMove.cpp  Best5OptMove.cpp  BestKOptMove.cpp  Between.cpp  Between_SL.cpp  Between_SSL.cpp  BridgeGain.cpp  BuildKDTree.cpp  C.cpp  CandidateReport.cpp  ChooseInitialTour.cpp  Connect.cpp  CreateCandidateSet.cpp  Distance.cpp  Distance_SPECIAL.cpp  ERXT.cpp  Excludable.cpp  Exclude.cpp  FindTour.cpp  FixedOrCommonCandidates.cpp  Flip.cpp  Flip_SL.cpp  Flip_SSL.cpp  Forbidden.cpp  FreeStructures.cpp  Gain23.cpp  GenerateCandidates.cpp  Genetic.cpp  GreedyTour.cpp  Hashing.cpp  Heap.cpp  (+46 more)
src/utils/: helper.cpp  stopwatch.cpp  tools.cpp
